build/log/idf_py_stderr_output_243350
/home/pi/wifiRelay_2/main/wifiRelay.c: In function 'setup_page_post_handler':
/home/pi/wifiRelay_2/main/wifiRelay.c:582:9: error: implicit declaration of function 'SP_LOGI'; did you mean 'ESP_LOGI'? [-Wimplicit-function-declaration]
  582 |         SP_LOGI(TAG, "saved: wifi_ssid:%s,wifi_pass:%s", wifi_ssid,wifi_pass);
      |         ^~~~~~~
      |         ESP_LOGI
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:87: esp-idf/main/CMakeFiles/__idf_main.dir/wifiRelay.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6157: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:149: all] Error 2
